# sharpa-rl-lab

./: .gitignore  NOTICE  README.md  pyproject.toml
cache/: deploy_init_traj.npy
ckpts/: cylinder_ball_cube.pth
pretrained/: 0.4-0.6-8.pth  0.5-0.5-1.pth
rl_isaaclab/algo/models/: models.py
rl_isaaclab/algo/padapt/: padapt.py
rl_isaaclab/algo/ppo/: experience.py  ppo.py
rl_isaaclab/scripts/: deploy.py  gen_grasp.py  play.py  train.py
rl_isaaclab/tasks/inhand_rotate/: __init__.py  sharpa_wave_deploy_env.py  sharpa_wave_deploy_env_cfg.py  sharpa_wave_env.py  sharpa_wave_env_cfg.py  sharpa_wave_grasp_env.py  sharpa_wave_grasp_env_cfg.py
rl_isaaclab/tasks/inhand_rotate/agents/: ppo_cfg.yaml
rl_isaaclab/utils/: Dockerfile  docker-compose.yml  keyboard_listener.py  misc.py  modified_events.py
rl_isaaclab/wrapper/: config_wrapper.py  sharpa_wave_deploy_env_wrapper.py  sharpa_wave_env_wrapper.py
