[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharpawave-rl-lab"
version = "1.0.1"
description = "sharpawave rl repo"
authors = [{ name = "sharpa" }]
dependencies = [
    "tensorboardX",
    "termcolor",
    "pynput",
    "omegaconf",
    "gymnasium",
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_isaaclab*"]
